--- a/uslugi.html
+++ b/uslugi.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="keywords" content="Next Level Cleaning, Услуги, почистване, услуги, чисто, дом, почистване на домове, професионално почистване, професионално почистване на домове, почистване на офис, офиси, услуги за чистене">
     <meta name="description" content="">
-    <title>uslugi</title>
+    <title>Услуги</title>
     <link rel="stylesheet" href="nicepage.css" media="screen">
 <link rel="stylesheet" href="uslugi.css" media="screen">
 <link rel="stylesheet" href="assets/css/leadmark.css">
