--- a/Services.html
+++ b/Services.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="keywords" content="Next Level Cleaning, ​Професионално почистване на домове, ​абонаментно и еднократно почистване на домове, ..​., ​Как работим в три лесни стъпки?, ​Какво предлагаме?, ​Еднократно основно почистване:, ​Ние предлагаме основно почистване целящо почистването и дезинфекцирането на трудно достъпните места и най малките детайли, така че в домът ви наистина да се усети чистотата и свежеста чрез следните дейности:, Почистване след ремонт, ​Абонаментно почистване, ​Поради забързаното ни ежедневие трудно намираме време за поддържане на желаното ниво на чистота в налия дом. За това ние от &amp;quot;Next Level Cleaning&amp;quot; сме тук за да ви помогнем домът ви винаги да е чист и подреден., ​Машинно пране на мека мебел, ​Пране на килими и мокети">
     <meta name="description" content="">
-    <title>Services</title>
+    <title>За дома</title>
     <link rel="stylesheet" href="nicepage.css" media="screen">
 <link rel="stylesheet" href="Services.css" media="screen">
     <script class="u-script" type="text/javascript" src="jquery.js" defer=""></script>
