--- a/uslugi.html
+++ b/uslugi.html
@@ -70,7 +70,7 @@
         <h5 class="u-text u-text-default u-text-1"> Изберете услуга</h5>
         <a href="Services.html" class="u-btn u-btn-round u-button-style u-hover-palette-1-light-1 u-palette-1-base u-radius-6 u-btn-1">За дома</a>
         <a href="offices.html" class="u-btn u-btn-round u-button-style u-hover-palette-1-light-1 u-palette-1-base u-radius-6 u-btn-2"> За офиса</a>
-        <a href="" class="u-btn u-btn-round u-button-style u-hover-palette-1-light-1 u-palette-1-base u-radius-6 u-btn-3"> Бояджийски услуги и дребни ремонти</a>
+        <a href="moreservices.html" class="u-btn u-btn-round u-button-style u-hover-palette-1-light-1 u-palette-1-base u-radius-6 u-btn-3"> Бояджийски услуги и дребни ремонти</a>
       </div>
     </section>
 
