--- a/moreservices.html
+++ b/moreservices.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="keywords" content="Next Level Cleaning, Услуги, почистване, услуги, чисто, дом, почистване на домове, професионално почистване, професионално почистване на домове, почистване на офис, офиси, услуги за чистене">
     <meta name="description" content="">
-    <title>MoreServices</title>
+    <title>Бояджийски услуги</title>
 	<link rel="icon" type="image/png" href="images/3321312.png"/>
     <!-- font icons -->
     <link rel="stylesheet" href="assets/vendors/themify-icons/css/themify-icons.css">
@@ -44,7 +44,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ml-auto">                     
                     <li class="nav-item">
-                        <a class="nav-link" href="#service">Начало</a>
+                        <a class="nav-link" href="index.html">Начало</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#about">За нас</a>
