--- a/offices.html
+++ b/offices.html
@@ -77,7 +77,7 @@
       <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
         <h5 class="u-align-center-xs u-text u-text-default u-text-1"> Чист офис = Висока продуктивност</h5>
         <p class="u-align-center-xs u-text u-text-2"> Човек прекарва над 200 работни дни от годината на работното си място. За да се радвате на висока продуктивност от вашия екип подсигурете му приятна атмосфера за работа.</p>
-        <p class="u-align-center-xs u-text u-text-3"> Ние от “NLC” ще се погрижим за вашите<br> административни и промишлени сгради, хотели, банки, заведения и магазини Да са идеално чисти свежи и приятни за работа.&nbsp;<br>
+        <p class="u-align-center-xs u-text u-text-3"> Ние от “NLC” ще се погрижим за вашите<br> административни и промишлени сгради, хотели, банки, заведения и магазини да са идеално чисти свежи и приятни за работа.&nbsp;<br>
         </p>
       </div>
     </section>
