--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
     <!-- Blog Section -->
     <section class="section" id="blog">
         <div class="container">
-            <h6 class="section-title mb-0 text-center">Нашите най търсени предложения</h6>
+            <h6 class="section-title mb-0 text-center">Нашите най-търсени предложения</h6>
 
             <div class="row">
                 <div class="col-md-4">
