--- a/moreservices.html
+++ b/moreservices.html
@@ -185,9 +185,11 @@
     <section class="u-clearfix u-section-4" id="sec-c10a">
       <div class="u-clearfix u-sheet u-sheet-1">
         <h1 class="u-align-center u-text u-text-default u-title u-text-1"> Цени и оферти</h1>
-        <p class="u-align-center u-large-text u-text u-text-default u-text-variant u-text-2"> *В цените за боядисване не са включени: облепяне на подове, мебели, прозорци, врати, преместване на мебели, грундиране, корекции, при силно замърсени повърхности се налага допълнителна подготовка.&nbsp;</p>
-        <p class="u-align-center u-large-text u-text u-text-default u-text-variant u-text-3"> Всички цени са без ДДС и са ориентировъчни, за точна цена е необходим оглед</p>
-        <blockquote class="u-align-center u-text u-text-default u-text-4"> "Плащате само за онова, от което имате нужда и ползвате"</blockquote>
+        <p class="u-align-center u-large-text u-text u-text-default u-text-variant u-text-2">Цени и оферти
+Цените на предлаганите от нас услуги, зависят от нуждите, спецификата, големината и други особености на вашия обект. За
+това фирма “ Next Level Cleaning”
+предлага безплатен оглед в удобно за вас време.&nbsp;</p>
+        <blockquote class="u-align-center u-text u-text-default u-text-4"> "Плащате само за това от което се нуждаете."</blockquote>
       </div>
     </section>
 	  
