--- a/uslugi.html
+++ b/uslugi.html
@@ -94,18 +94,17 @@
                       <h4 class="mb-4">Имате въпроси? Пишете ни!</h4>
                       <div class="form-row">
                           <div class="form-group col-sm-4">
-                              <input type="text" class="form-control text-white rounded-0 bg-transparent" name="name" placeholder="Име" required>
+                              <input type="text" name="Name" class="form-control text-white rounded-0 bg-transparent"  placeholder="Име" required>
                           </div>
                           <div class="form-group col-sm-4">
-                              <input type="email" class="form-control text-white rounded-0 bg-transparent" name="Email" placeholder="Имейл" required>
+                              <input type="email" name="Email" class="form-control text-white rounded-0 bg-transparent"  placeholder="Имейл" required>
                           </div>
                           <div class="form-group col-sm-4">
-                              <input type="text" class="form-control text-white rounded-0 bg-transparent" name="subject" placeholder="Заглавие" required>
-				   <div class="form-group col-12">
+                              <input type="text" name="Subject" class="form-control text-white rounded-0 bg-transparent"  placeholder="Заглавие" required>
+                          </div>
+                         <div class="form-group col-12">
                               <textarea name="message" id="" cols="30" rows="4" class="form-control text-white rounded-0 bg-transparent" placeholder="Вашето съобщение" required></textarea>
 
-                          </div>
-                         
                           </div>
                           <div class="form-group col-12 mb-0">
                               <button type="submit" class="btn btn-primary rounded w-md mt-3">Изпрати</button>
