--- a/uslugi.html
+++ b/uslugi.html
@@ -90,7 +90,7 @@
                   <p></p>
               </div>
               <div class="col-md-7">
-                  <form action="https://formsubmit.co/next-level-cleaning@abv.bg" method="post" enctype="text/plain">
+                  <form action="https://formspree.io/f/mzbqzrqz" method="post" enctype="text/plain">
                       <h4 class="mb-4">Имате въпроси? Пишете ни!</h4>
                       <div class="form-row">
                           <div class="form-group col-sm-4">
