--- a/uslugi.html
+++ b/uslugi.html
@@ -94,12 +94,14 @@
                       <h4 class="mb-4">Имате въпроси? Пишете ни!</h4>
                       <div class="form-row">
                           <div class="form-group col-sm-4">
-                              <input type="text" name="Name" class="form-control text-white rounded-0 bg-transparent"  placeholder="Име" required>
+                              <input type="text" name="fname" class="form-control text-white rounded-0 bg-transparent"  placeholder="Име" required>
                           </div>
                           <div class="form-group col-sm-4">
                               <input type="email" name="Email" class="form-control text-white rounded-0 bg-transparent"  placeholder="Имейл" required>
                           </div>
-                          
+                          <div class="form-group col-sm-4">
+                              <input type="text" name="lname" class="form-control text-white rounded-0 bg-transparent"  placeholder="Фамилия" required>
+                          </div>
                          <div class="form-group col-12">
                               <textarea name="message" id="" cols="30" rows="4" class="form-control text-white rounded-0 bg-transparent" placeholder="Вашето съобщение" required></textarea>
 
